--- a/src/style.scss
+++ b/src/style.scss
@@ -7,20 +7,89 @@ body {
 body {
   #app {
     height: 100vh;
-    .table {
+
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
       width: 80%;
       margin-top: 1rem;
       margin-left: auto;
       margin-right: auto;
       padding: 1rem;
-      .row {
-        border-bottom: 1px solid #565656;
-        padding: 0 0 0.5rem;
-        &:not(:nth-child(1)) {
-          margin-bottom: 0.5rem;
+      .table {
+        .row {
+          padding: 0 0 0.5rem;
+          &:not(:nth-child(1)) {
+            border-bottom: 1px solid #565656;
+            margin-bottom: 0.5rem;
+          }
         }
       }
       box-shadow: 0 0 1rem 0 #56565656;
+
+      form {
+        display: flex;
+        flex-direction: row;
+        gap: 0.3rem;
+
+        align-items: center;
+      }
+      .input {
+        border: 1px solid #56565656;
+        padding: 0.3rem 0.5rem;
+        &:hover,
+        &:focus-within,
+        &:active {
+          box-shadow: 0 0 0 0.2rem #477bc956;
+        }
+
+        border-radius: 0.2rem;
+        -webkit-border-radius: 0.2rem;
+        -moz-border-radius: 0.2rem;
+        -ms-border-radius: 0.2rem;
+        -o-border-radius: 0.2rem;
+      }
+
+      .input,
+      .btn,
+      .fixed {
+        outline: none;
+      }
+
+      .fixed {
+        display: inline-block;
+        border: 1px solid #56565656;
+        width: 25px;
+        height: 25px;
+      }
+
+      #fixed {
+        display: none;
+      }
+
+      .btn {
+        border: none;
+        background-color: #5777dd;
+        color: white;
+        padding: 0.3rem 0.5rem;
+
+        &:hover,
+        &:focus-within,
+        &:active {
+          box-shadow: 0 0 0 0.2rem #477bc956;
+        }
+        &:active {
+          filter: brightness(0.9);
+          -webkit-filter: brightness(0.9);
+        }
+        border-radius: 0.2rem;
+        -webkit-border-radius: 0.2rem;
+        -moz-border-radius: 0.2rem;
+        -ms-border-radius: 0.2rem;
+        -o-border-radius: 0.2rem;
+      }
 
       border-radius: 1rem;
       -webkit-border-radius: 1rem;
